<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment"
    android:background="#222222">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_top_genres"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="164dp"
        android:layout_height="129dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#ff40a0 "
        android:fontFamily="@font/GothamBold"
        android:gravity="end"
        android:text="@string/banda"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="129dp"
        android:gravity="end"
        android:textSize="19sp"
        android:fontFamily="@font/GothamBold"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:text="@string/hip_hop"
        android:backgroundTint="#e61919"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="164dp"
        android:layout_height="129dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="188dp"
        android:backgroundTint="#a0a0a0"
        android:fontFamily="@font/GothamBold"
        android:gravity="end"
        android:text="@string/latina"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="164dp"
        android:layout_height="129dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/GothamBold"
        android:gravity="end"
        android:backgroundTint="#a000a0"
        android:text="Techno"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>










